--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
 	},
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"test": "cross-env NODE_ENV=test mocha --file test/server.test.js"
 	},
 	"dependencies": {
 		"express": "^4.16.2",
 		"mongoose": "^5.1.4",
 		"morgan": "^1.9.0"
+	},
+	"devDependencies": {
+		"chai": "^4.1.2",
+		"chai-http": "^4.0.0",
+		"cross-env": "^5.1.6",
+		"mocha": "^5.2.0"
 	}
 }
